iPhone backface visibility fixes

--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,4 +1,5 @@
 .flip-container {
+	-webkit-perspective: $width-wrapper;
 	perspective: $width-wrapper;
 	width: $width-wrapper;
 	.flipper {
@@ -10,6 +11,7 @@
 	.page-back,
 	.page-front {
 		width: $width-wrapper;
+		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
 		position: absolute;
 		top: 0;
