--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,5 +1,5 @@
 .section-projects {
-    border-right: 1px solid #b7b7b7;
+    border-right: 1px solid $color-grey-4;
     height: $body-height;
     .project-detail {
         padding: 25px 40px 20px;
