--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -112,7 +112,3 @@
         margin:10px 0 5px;
     }
 }
-.section-responsibilities{
-}
-.section-achievements{
-}
